<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_centerInParent="true"
            android:orientation="vertical">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/login"
                  android:textColor="@color/colorPrimary"
                  android:textSize="24sp"
                  android:layout_marginBottom="30dp"
                  android:layout_gravity="center_horizontal"/>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:errorEnabled="true"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">
            <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="15dp"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="16sp"
                    android:theme="@style/EditTextWhite"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:errorEnabled="true"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">

            <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_pass"
                    android:drawablePadding="15dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="16sp"
                    android:theme="@style/EditTextWhite"/>
        </android.support.design.widget.TextInputLayout>


        <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="30dp"
                android:background="@drawable/cyan_btn"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"/>

        <LinearLayout android:layout_width="wrap_content"
                      android:orientation="horizontal"
                      android:layout_gravity="center_horizontal"
                      android:layout_height="wrap_content">

            <TextView android:layout_width="wrap_content"
                      android:text="@string/exists_account"
                      android:textColor="@color/colorPrimary"
                      android:layout_height="wrap_content"/>
            <TextView android:layout_width="wrap_content"
                      android:id="@+id/text_registration"
                      android:text="@string/registration"
                      android:layout_marginStart="16dp"
                      android:textColor="@color/colorPrimary"
                      android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>